--- a/src/views/parques.ejs
+++ b/src/views/parques.ejs
@@ -60,7 +60,7 @@
           <article class="card mb-3 bg-secondary shadow-sm">
             <div class="row g-0 ">
               <div class="col-md-4">
-                <img src="images/parques/<%= item.cod_parque%>/main.jpg"  class="rounded" alt="Sin imagen: <%= item.nombre %>" style="width: 100%; height: auto; vertical-align:top;">
+                <img src="images/<%= item.img%>"  class="rounded" alt="Sin imagen: <%= item.nombre %>" style="width: 100%; height: auto; vertical-align:top;">
               </div>
               <div class="col-md-8">
                 <div class="card-body ms-3">
@@ -87,7 +87,7 @@
                   </div>
                   <div style="text-align: right;">
                     
-                    <button type="button" class="btn btn-primary text-light" data-bs-toggle="modal" data-bs-target="#mapaModal" data-bs-whatever="<%=item.cod_parque%>">Ver mapa</button>
+                    <button type="button" class="btn btn-primary text-light" data-bs-toggle="modal" data-bs-target="#mapaModal" data-bs-whatever="<%=item.mapa%>">Ver mapa</button>
                     <a href="#" class="btn btn-primary text-light disabled">Descargar mapa</a>
                     <% if (item.url_reserva != null && item.url_reserva != '') { %>
                     <a href="<%=item.url_reserva%>" target="_blank" class="btn btn-primary text-light" >Hacer reserva</a>
@@ -121,7 +121,7 @@
     var recipient = button.getAttribute('data-bs-whatever');
     // Actualizar el contenido del modal
     var modalBodyImg = mapaModal.querySelector('.modal-body img');
-    modalBodyImg.src = `images/parques/${recipient}/map.jpg`;
+    modalBodyImg.src = `images/${recipient}`;
   });
 
   function enviarForm() {
