Descarga mapa Correcion en la subida .JPG con mayuscula

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -20,7 +20,7 @@
   <div class="row mb-5">
     <div class="col-12 col-md-4">
       <div class="card bg-secondary shadow">
-        <img src="images/Cerro-Manquehue.jpg" class="card-img-top" alt="...">
+        <img src="images/manqImg.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cerro Manquehue</h5>
           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
@@ -33,9 +33,9 @@
 
     <div class="col-12 col-md-4">
       <div class="card bg-secondary shadow">
-        <img src="images/aguas-ramon.jpg" class="card-img-top" alt="...">
+        <img src="images/papoImg.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Aguas de Ramón</h5>
+          <h5 class="card-title">Monumento Natural Paposo Norte</h5>
           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
         </div>
         <div class="card-body">
@@ -46,7 +46,7 @@
 
     <div class="col-12 col-md-4">
       <div class="card bg-secondary shadow">
-        <img src="images/torresdel-paine-700x367.jpg" class="card-img-top" alt="...">
+        <img src="images/torresImg.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Torres del Paine</h5>
           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
