test api en produccion

--- a/src/views/parques.ejs
+++ b/src/views/parques.ejs
@@ -1,5 +1,32 @@
 <%- layout('layouts/main')  %> 
 
+<script>
+  if('geolocation' in navigator) {
+    navigator.geolocation.getCurrentPosition(async position => {
+      const lat = position.coords.latitude;
+      const lon = position.coords.longitude;
+      console.log(lat);
+      console.log(lon);
+      document.getElementById('hddnLat').value = lat;
+      document.getElementById('hddnLong').value = lon;
+
+      const coordenadas = { lat, lon };
+      const options = {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(coordenadas)
+      };
+      const response = await fetch('/ruta', options);
+      const json = await response.json();
+      console.log(json);
+    });
+  } else {
+    alert('Geolocalización no está disponible en su navegador');
+  }
+</script>
+
 <!-- Modal de mapas -->
 <div class="modal fade" id="mapaModal" tabindex="-1" aria-labelledby="mapaModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-fullscreen">
