--- a/src/views/parque/agregar.ejs
+++ b/src/views/parque/agregar.ejs
@@ -1,5 +1,9 @@
 <%- layout('layouts/main')  %> 
 
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&sensor=false&libraries=places"></script>
+<script type="text/javascript" src="https://rawgit.com/Logicify/jquery-locationpicker-plugin/master/dist/locationpicker.jquery.js"></script>
+
 <div class="row">
   <h1 class="display-4 text-center">Agregar Parque</h1>
 </div>
@@ -37,6 +41,13 @@
         <input type="text" class="form-control" id="direccion" name="direccion" maxlength="50" required>
         <label for="direccion">Dirección del parque</label>
       </div>
+    </div>
+
+    <div class="row">
+      Location: <input type="text" id="location" style="width: 200px"/>
+      Lat <input type="text" id="lat" style="width: 200px"/>
+      Long: <input type="text" id="lng" style="width: 200px"/>
+      <div id="us2" style="width: 500px; height: 400px;"></div> 
     </div>
     
     <div class="row">
@@ -104,3 +115,21 @@
     </div>
   </form>
 </div>
+
+<script>
+  $(function() {
+    $('#us2').locationpicker({
+        location: {latitude: -33.4513, longitude: -70.6653},   
+        radius: 0,
+        inputBinding: {
+          latitudeInput: $('#lat'),
+          longitudeInput: $('#lng'),
+          locationNameInput: $('#location')
+        },
+        enableAutocomplete: true,
+        onchanged: function(currentLocation, radius, isMarkerDropped) {
+          alert("Location changed. New location (" + currentLocation.latitude + ", " + currentLocation.longitude + ")");
+        }
+    });
+ });
+</script>
