--- a/src/views/parque/agregar.ejs
+++ b/src/views/parque/agregar.ejs
@@ -45,12 +45,12 @@
 
     <div class="row">
       <div class="col-sm-4 col-lg-3  my-1 form-floating">
-        <input type="text" class="form-control" id="lat" name="lat" disabled>
-        <label for="lat">Latitud</label>
+        <input type="number" class="form-control" id="long" step="any" min="-180" max="180" name="long">
+        <label for="long">Longitud</label>
       </div>
       <div class="col-sm-4 col-lg-3  my-1 form-floating">
-        <input type="text" class="form-control" id="lon" name="lon" disabled>
-        <label for="lon">Longitud</label>
+        <input type="number" class="form-control" id="lat" step="any" min="-90" max="90" name="lat">
+        <label for="lat">Latitud</label>
       </div>
       <!--Location: <input type="text" id="location" style="width: 200px"/>-->
       <div id="map" style="width: 400px; height: 200px;"></div> 
