Vista en construccion afiliados, 404 mejorada

--- a/src/views/404.ejs
+++ b/src/views/404.ejs
@@ -1,9 +1,13 @@
 <%- layout('layouts/main')  %> 
-
-<div class="row">
-    <div class="col-3"></div>
-    <div class="col-6">
-        <p class="h1"> OOPS, no se encuentra esta página</p>
+<div class="row my-5">
+    <div class="d-flex align-items-center justify-content-center vh-50">
+        <div class="text-center">
+            <h1 class="display-1 fw-bold">404</h1>
+            <p class="fs-2"> <span class="text-danger">Opps!</span> no se encuentra esta página.</p>
+            <p class="lead fs-4 mb-5">
+                La página que estás buscando no existe.
+            </p>
+            <a href="/" class="btn btn-lg btn-primary text-light">Ir a inicio</a>
+        </div>
     </div>
-    <div class="col-3"></div>
 </div>
