--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -29,7 +29,7 @@
       <img src="images/index.jpg" class="d-block w-100" alt="CerroManquehue" height="300px" style="filter: brightness(20%)">
       <div class="carousel-caption">
         <h2 style="font-size:60px">Todo Rutas</h2>
-        <a class="btn btn-primary text-light"  href="./parques">Ver parques</a>            
+        <a class="btn btn-lg btn-primary text-light"  href="/parques">Ver parques</a>
       </div>
     </div>
   </div>
