Cambios para presentacion

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -37,7 +37,7 @@
 
 <!-- Recomendados -->
 <div class="container mt-5">
-  <h3 class="h2 text-dark text-center">Recomendados</h3>
+  <h3 class="h2 mb-4 text-dark text-center">Recomendados</h3>
 
   <div class="row mb-5">
     <div class="col-12 col-md-4">
@@ -45,20 +45,7 @@
         <img src="images/manqImg.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cerro Manquehue</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
-        </div>
-        <div class="card-body">
-          <a href="#" class="card-link">Ver más...</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-12 col-md-4">
-      <div class="card bg-secondary shadow">
-        <img src="images/papoImg.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Monumento Natural Paposo Norte</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
+          <p class="card-text">El cerro Manquehue es un ícono dentro de las rutas de trekking en Santiago. Su privilegiada posición dentro de la ciudad sumado a la increíble vista desde su cumbre, dan como resultado que es una de las 10 rutas de más visitadas en la Región Metropolitana. Todos los días de la semana y a cualquier hora, es posible encontrarnos con gente subiendo y bajando el Manquehue.<p>
         </div>
         <div class="card-body">
           <a href="#" class="card-link">Ver más...</a>
@@ -71,12 +58,24 @@
         <img src="images/torresImg.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Torres del Paine</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
-        </div>
-        <div class="card-body">
-          <a href="#" class="card-link">Ver más...</a>
+          <p class="card-text">El Parque Nacional Torres de Paine es el parque nacional más importante de Chile. Se encuentra cerca de Los Andes, en el externo sur de Chile, en la Región de Magallanes y la Antártica chilena. Está situado a 154 kilómetros al noroeste de Puerto Natales y a 399 kilómetros de Punta Arenas. El parque está ubicado en el lado este del Glaciar Grey.<p>
+          </div>
+          <div class="card-body">
+            <a href="#" class="card-link">Ver más...</a>
+          </div>
         </div>
       </div>
-    </div>
-
+      
+      <div class="col-12 col-md-4">
+        <div class="card bg-secondary shadow">
+          <img src="images/papoImg.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Monumento Natural Paposo Norte</h5>
+            <p class="card-text">La unidad Monumento Natural Paposo Norte está ubicada administrativamente en la costa de la región, provincia y comuna de Antofagasta. Se ubica a 65 km al norte del poblado de Paposo. Su superficie es de 7.915.41 hectáreas. Fue creada el 26 de diciembre del 2013<p>
+          </div>
+          <div class="card-body">
+            <a href="#" class="card-link">Ver más...</a>
+          </div>
+        </div>
+      </div>
 </div>
